--- a/stylesINDEX.css
+++ b/stylesINDEX.css
@@ -10,63 +10,47 @@
     font-family: 'headingnow-88heavy';
     src: url(fonts/HeadingNow-88Heavy.ttf);
 }
-
 body{
-    background-color: orange;
+    background-color: rgb(255, 153, 0);
 }
-p{
-    margin: 0px;
-}
-#titulo{
+#tituloIndex{
     font-family: 'headingnow-88heavyitalic';
     font-size: 60px;
+    line-height: 70px;
     color: #000000;
     text-align: center;
-    margin: 0px;
+    margin: 0px auto;
+    word-wrap: break-word;
+    width: 700px;
 }
-#tituloenquete{
-    font-family: 'headingnow-88heavy';
-    font-size: 20px;
-    text-align: center;
-    opacity: 75%;
-}
-#enquete{
+#nomeUsuario{
     font-family: 'headingnow-74regular';
-    font-size: 15px;
+    font-size: 20px;
+    color: #000000;
     text-align: center;
+    background-color: white;
+    padding: 20px;
+    border-radius: 20px;
+    width: 710px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+    position: relative;
 }
-#cliqueaqui{
+#indexProximo{
     font-family: 'headingnow-88heavyitalic';
     font-size: 20px;
     color: white;
     text-align: center;
     background-color: black;
-    padding: 15px;
+    padding: 20px;
     border-radius: 20px;
     width: 710px;
     display: block;
     margin: 0 auto;
+    margin-top: 10px;
     position: relative;
 }
-    #cliqueaqui:hover{
+    #indexproximo:hover{
     color: yellow;
-}
-#imagemabobora{
-    display: block;
-    margin: 0 auto;
-    border: white;
-    border-radius: 20px;
-    margin-top: -18px;
-}
-#descriçãoimagem{
-    font-family: 'headingnow-74regular';
-    font-size: px;
-    text-align: center;
-    margin-top: -25px;
-}
-#direitosreservados{
-    font-family: 'headingnow-88heavy';
-    font-size: 15px;
-    text-align: center;
-    margin-top: 15px;
 }
