--- a/css/stylesCALCULO.css
+++ b/css/stylesCALCULO.css
@@ -18,7 +18,25 @@ p{
     font-family: headingnow-74regular;
     margin: 0px;
 }
+
+#homebarText{
+    color: white;
+    font-family: 'headingnow-88heavyitalic';
+}
+
+#homebar{
+    background-color: black;
+    color: white;
+    padding: 15px;
+    font-family: 'headingnow-88heavy';
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
 #tituloCalculo{
+    padding-top: 60px;
     font-family: 'headingnow-88heavyitalic';
     font-size: 60px;
     line-height: 70px;
